fix: title, location option to vnet and vm,  env to rg name

--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -1,4 +1,4 @@
-name: VM and Vnet easy deployer
+name: Deploy a VM on a VNET on Azure
 
 on:
   workflow_dispatch:
@@ -16,7 +16,7 @@ jobs:
           run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}        
         - name: Deploy resource group
           shell: bash
-          run: az group create --name icmelrg --location eastus      
+          run: az group create --name $RESOURCE_GROUP --location eastus      
 
     deploy-infrastructure:
         needs: create-rg
@@ -31,8 +31,8 @@ jobs:
             shell: bash
             run: | 
                 # -- Virtual Network --           
-                az network vnet create -g $RESOURCE_GROUP -n icvezvnet --address-prefix 10.0.0.0/16 --subnet-name icvezvnet_sub --subnet-prefixes '10.0.0.0/24'       
+                az network vnet create -g $RESOURCE_GROUP -n icvezvnet --address-prefix 10.0.0.0/16 --subnet-name icvezvnet_sub --location eastus --subnet-prefixes '10.0.0.0/24'       
                 # -- Virtual Machine --       
-                az vm create -n icezvm -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvezvnet --subnet icvezvnet_sub --admin-username azureuser --generate-ssh-keys --output json --verbose  
+                az vm create -n icezvm -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvezvnet --subnet icvezvnet_sub --location eastus --admin-username azureuser --generate-ssh-keys --output json --verbose  
 
     
