--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -43,7 +43,18 @@ jobs:
                 az network vnet create -g $RESOURCE_GROUP -n icvezvnet --address-prefix 10.0.0.0/16 --subnet-name icvezvnet_sub --location eastus --subnet-prefixes '10.0.0.0/24'       
                 # -- Virtual Machine --       
                 az vm create -n icezvm -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvezvnet --subnet icvezvnet_sub --location eastus --admin-username azureuser --generate-ssh-keys --output json --verbose  
-          - name: Conditional test
+          - name: ssh into the machine
             if: ${{ github.event.inputs.connection == 'Yup' }}
-            run: "yup"
+            run: |
+              ls
+              pwd
+              echo "executing 1st cd now"
+              cd ..
+              ls 
+              pwd
+              echo "executing 2nd cd now"
+              cd ..
+              ls
+              pwd
+
     
