--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -43,18 +43,17 @@ jobs:
                 az network vnet create -g $RESOURCE_GROUP -n icvezvnet --address-prefix 10.0.0.0/16 --subnet-name icvezvnet_sub --location eastus --subnet-prefixes '10.0.0.0/24'       
                 # -- Virtual Machine --       
                 az vm create -n icezvm -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name icvezvnet --subnet icvezvnet_sub --location eastus --admin-username azureuser --generate-ssh-keys --output json --verbose  
+
+          - name: Get VM IP Address
+            if: ${{ github.event.inputs.connection == 'Yup' }}
+            run: |
+              IP_ADDRESS=$(az vm list-ip-addresses -g $RESOURCE_GROUP -n icezvm --query "[].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv)
+              echo "VM_IP_ADDRESS=$IP_ADDRESS" >> $GITHUB_ENV
+
           - name: ssh into the machine
             if: ${{ github.event.inputs.connection == 'Yup' }}
             run: |
-              ls
-              pwd
-              echo "executing 1st cd now"
-              cd ..
-              ls 
-              pwd
-              echo "executing 2nd cd now"
-              cd ..
-              ls
-              pwd
+              chmod 600 ~/.ssh/id_rsa
+              ssh -i ~/.ssh/id_rsa azureuser@${{ env.VM_IP_ADDRESS }}
+              echo "hello from the machine"
 
-    
