--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -54,7 +54,8 @@ jobs:
             if: ${{ github.event.inputs.connection == 'artifacts' }}
             run: |
               IP_ADDRESS=$(az vm list-ip-addresses -g $RESOURCE_GROUP -n icezvm --query "[].virtualMachine.network.publicIpAddresses[0].ipAddress" -o tsv)
-              echo "VM_IP_ADDRESS=$IP_ADDRESS" >> ~/.ssh/pip-addr
+              echo $IP_ADDRESS
+              echo $IP_ADDRESS > ~/.ssh/pip-addr
 
 
           - name: Upload artifact folder
