feat: add choice input in eraser workflow

--- a/.github/workflows/eraser.yml
+++ b/.github/workflows/eraser.yml
@@ -3,6 +3,12 @@ name: Infrastructure Eraser
 on:
   workflow_dispatch:
     inputs:
+      trigger:
+        description: 'trigger other workflows after it'
+        required: false
+        type: choice
+        options:
+        - 'ez'
       resource-group-name:
         type: string
         required: false
