--- a/.github/workflows/eraser.yml
+++ b/.github/workflows/eraser.yml
@@ -58,9 +58,8 @@ jobs:
 
       - name: Dispatch vm-vnet-ez workflow
         if: ${{ github.event.inputs.trigger == 'vm-vnet-ez' }}
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: token ${{ secrets.PAT }}" \
-            https://api.github.com/repos/fbisceglia02/AzureOps/dispatches \
-            -d '{"event_type": "dispatch-vm-vnet-ez", "client_payload": {"connection": "artifacts"}}'
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.PAT }}
+          repository: fbisceglia02/AzureOps
+          event-type: "dispatch-vm-vnet-ez"
