--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -66,6 +66,16 @@ jobs:
             with:
               name: key-pip
               path: ~/.ssh/**
+
+          - name: Send Completion message
+            if: ${{ github.event.inputs.connection == 'artifacts' }}
+            run: |
+              curl -s \
+                --form-string "token=${{ secrets.PUSHOVER_API_TOKEN }}" \
+                --form-string "user=${{ secrets.API_KEY }}" \
+                --form-string "message=VM and VNET successfully deleted and re-deployed!" \
+                https://api.pushover.net/1/messages.json
+
     
 
 
