--- a/.github/workflows/caller_workflow.yml
+++ b/.github/workflows/caller_workflow.yml
@@ -19,5 +19,5 @@ jobs:
           token: ${{ secrets.PAT }}
           repository: fbisceglia02/AzureOps
           event-type: ${{ github.event.inputs.event_type }}
-          client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+          client-payload: '{"connection": "approved"}'
 
