--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Conditional Step
         # if: ${{ github.event.client_payload.condition == 'test' }}
         run: |
-          echo "Payload Content: ${{ github.event.client_payload }}"
+          echo "Payload Content: ${{ github.event.client_payload.connection }}"
