feat: add if condition for event payload and add event payload in eraser

--- a/.github/workflows/eraser.yml
+++ b/.github/workflows/eraser.yml
@@ -63,4 +63,4 @@ jobs:
           token: ${{ secrets.PAT }}
           repository: fbisceglia02/AzureOps
           event-type: "dispatch-vm-vnet-ez"
-          
+          client-payload: '{"connection": "artifacts"}'
