--- a/.github/workflows/vm-vnet-ez.yml
+++ b/.github/workflows/vm-vnet-ez.yml
@@ -73,7 +73,7 @@ jobs:
               curl -s \
                 --form-string "token=${{ secrets.PUSHOVER_API_TOKEN }}" \
                 --form-string "user=${{ secrets.PUSHOVER_API_KEY }}" \
-                --form-string "message=VM and VNET successfully deleted and re-deployed!" \
+                --form-string "message=VM and VNET deployed" \
                 https://api.pushover.net/1/messages.json
 
 # ----- input: ssh -----
