--- a/.github/workflows/eraser.yml
+++ b/.github/workflows/eraser.yml
@@ -10,6 +10,7 @@ on:
         options:
         - 'vm-vnet-ez'
         - 'two-vm-vnet'
+        - 'none'
       resource-group-name:
         type: string
         required: false
