--- a/.github/workflows/aks-vm-vnet-ez.yml
+++ b/.github/workflows/aks-vm-vnet-ez.yml
@@ -49,6 +49,7 @@ jobs:
         - name: Deploy Azure Kubernetes Services 
           shell: bash
           run: |
+                az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}    
                 az aks create -n $AKS_NAME -g $RESOURCE_GROUP -l eastus --generate-ssh-keys
                 az aks get-credentials --resource-group $RESOURCE_GROUP --name $AKS_NAME --overwrite-existing 
 
