--- a/.github/workflows/artillery-vms.yml
+++ b/.github/workflows/artillery-vms.yml
@@ -16,26 +16,32 @@ jobs:
       - name: Deploy resource group
         shell: bash
         run: az group create --name icmelrg --location eastus           
-  deploy-vnets-vms:
+  deploy-vms:
     needs: create-rg
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        vm_number: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
     - name: Azure Custom Login
       shell: bash
       run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}    
-    - name: Deploy Infrastructure and Install Software
+    - name: Deploy VM and Install Software
       shell: bash
       run: |        
-        # -- Virtual Networks --           
-        az network vnet create -g $RESOURCE_GROUP -n icvnet0 --address-prefix 10.0.0.0/16 --subnet-name icvnet0_sub --subnet-prefixes '10.0.0.0/24'          
-        az network vnet create -g $RESOURCE_GROUP -n icvnet1 --address-prefix 10.1.0.0/16 --subnet-name icvnet1_sub --subnet-prefixes '10.1.0.0/24'
-        # -- Deploy VMs and setup NPM and Artillery --
-        for i in {0..9}; do
-          vnet="icvnet$((i % 2))"
-          subnet="${vnet}_sub"
-          az vm create -n "icmel$i" -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name $vnet --subnet $subnet --admin-username azureuser --generate-ssh-keys --output json --verbose
-          # Install Node.js and Artillery
-          az vm run-command invoke -g $RESOURCE_GROUP -n "icmel$i" --command-id RunShellScript --scripts "curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery"
-        done
+        # Decide which VNet to use based on even/odd VM number
+        if [ $(( ${{ matrix.vm_number }} % 2 )) -eq 0 ]; then
+          vnet_name="icvnet0"
+          subnet_name="icvnet0_sub"
+        else
+          vnet_name="icvnet1"
+          subnet_name="icvnet1_sub"
+        fi
+
+        # Create VM
+        az vm create -n "icmel${{ matrix.vm_number }}" -g $RESOURCE_GROUP --image Ubuntu2204 --vnet-name $vnet_name --subnet $subnet_name --admin-username azureuser --generate-ssh-keys --output json --verbose
+        
+        # Install Node.js and Artillery
+        az vm run-command invoke -g $RESOURCE_GROUP -n "icmel${{ matrix.vm_number }}" --command-id RunShellScript --scripts "curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery"
