--- a/.github/workflows/artillery-runner.yml
+++ b/.github/workflows/artillery-runner.yml
@@ -13,6 +13,12 @@ jobs:
         shell: bash
         run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
       - name: Install artillery
+        if: false
         shell: bash
-        run: |    
-          curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery
+        run: curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery
+      - name: Run test
+        shell: bash
+        run: |
+          echo "current dir" && pwd
+          echo "---content---"
+          ls
