--- a/.github/workflows/artillery-runner.yml
+++ b/.github/workflows/artillery-runner.yml
@@ -2,7 +2,7 @@ name: Artillery test
 #comment
 on:
   workflow_dispatch:
-  
+
 jobs:
   create-rg:
     runs-on: ubuntu-latest
@@ -12,6 +12,14 @@ jobs:
       - name: Install artillery
         shell: bash
         run: curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery
+
+  run-testS:
+    needs: create-rg
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test_number: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+    steps:
       - name: Run test
         shell: bash
         run: |
