chore: install artillery on each matrix job

--- a/.github/workflows/artillery-runner.yml
+++ b/.github/workflows/artillery-runner.yml
@@ -9,17 +9,17 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Install artillery
-        shell: bash
-        run: curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery
-
-  run-testS:
+      
+  install-and-run:
     needs: create-rg
     runs-on: ubuntu-latest
     strategy:
       matrix:
         test_number: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
     steps:
+      - name: Install artillery
+        shell: bash
+        run: curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -; sudo apt-get install -y nodejs; sudo npm install -g npm@latest; sudo npm install -g artillery
       - name: Run test
         shell: bash
         run: |
