fix: first job name in checkout repo

--- a/.github/workflows/artillery-runner.yml
+++ b/.github/workflows/artillery-runner.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  create-rg:
+  checkout-repo:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
