--- a/.github/workflows/artillery-runner.yml
+++ b/.github/workflows/artillery-runner.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       
   install-and-run:
-    needs: create-rg
+    needs: checkout-repo
     runs-on: ubuntu-latest
     strategy:
       matrix:
