--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Azure Custom Login
         shell: bash
-        run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZ_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+        run: az login --service-principal -u ${{ secrets.APP_REG_CLIENT_ID }} -p ${{ secrets.APP_REG_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
       - name: Setup Variables
         shell: bash
         run: |
