--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -102,7 +102,9 @@ jobs:
         run: |
             # Install ALB Controller using Helm
             {
+                echo "line 1 of the step"
                 az aks get-credentials --resource-group $RESOURCE_GROUP --name $AKS_NAME
+                echo "line 2 of the step"
                 helm install alb-controller oci://mcr.microsoft.com/application-lb/charts/alb-controller --version 1.0.2 --set albController.namespace=$CONTROLLER_NAMESPACE --set albController.podIdentity.clientID=$(az identity show -g $RESOURCE_GROUP -n azure-alb-identity --query clientId -o tsv)
             }
 
