--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -18,9 +18,11 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+     
       - name: Azure Custom Login
         shell: bash
         run: az login --service-principal -u ${{ secrets.APP_REG_CLIENT_ID }} -p ${{ secrets.APP_REG_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+      
       - name: Setup Variables
         shell: bash
         run: |
@@ -50,7 +52,6 @@ jobs:
               az aks get-credentials --resource-group $RESOURCE_GROUP --name $AKS_NAME --overwrite-existing
             fi
  
-
       - name: Register azure account and required resource providers
         shell: bash
         run: |
@@ -104,6 +105,7 @@ jobs:
             {
                 echo "line 1 of the step"
                 az aks get-credentials --resource-group $RESOURCE_GROUP --name $AKS_NAME
+                kubectl create namespace $HELM_NAMESPACE
                 echo "line 2 of the step"
                 helm install alb-controller oci://mcr.microsoft.com/application-lb/charts/alb-controller --version 1.0.2 --set albController.namespace=$CONTROLLER_NAMESPACE --set albController.podIdentity.clientID=$(az identity show -g $RESOURCE_GROUP -n azure-alb-identity --query clientId -o tsv)
             }
