--- a/.github/workflows/aks-deploy-alb-controller.yml
+++ b/.github/workflows/aks-deploy-alb-controller.yml
@@ -13,7 +13,7 @@ on:
           description: 'Name of the aks will be created'
 
 jobs:
-  create-rg:
+  create-aks-ifnotexist-create-alb:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
